--- a/palacinci.html
+++ b/palacinci.html
@@ -8,5 +8,6 @@
 <body>
     <h1>vrste palačinki</h1>
     <p> Obožavam one s pekmezom od šljiva</p>
+    <p>Ni one s orasima nisu za baciti</p>
 </body>
 </html>
